--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+:root {
+    --mask-color: rgb(41, 41, 41);
+    --skin-color: rgb(221, 212, 176);
+    --lip-color: rgb(255, 23, 23);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -18,9 +24,13 @@ body {
     height: 250px;
     width: 300px;
 
-    background-color: rgb(41, 41, 41);
+    background-color: var(--mask-color);
 
     border-radius: 120px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     position: relative;
 }
@@ -36,7 +46,7 @@ body {
 
     position: absolute;
 
-    background-color: rgb(41, 41, 41);
+    background-color: var(--mask-color);
 }
 
 .head-curve {
@@ -72,7 +82,7 @@ body {
 .right-ear {
     border-right: 80px solid transparent;
     border-left: 35px solid transparent;
-    border-bottom: 200px solid rgb(41, 41, 41);
+    border-bottom: 200px solid var(--mask-color);
 
     position: absolute;
     top: -170px;
@@ -86,4 +96,57 @@ body {
     right: -20px;
 
     transform: rotateY(180deg);
+}
+
+/* mouth of the batman */
+.mouth-shape {
+    height: 80px;
+    width: 250px;
+
+    border-radius: 40%;
+
+    background-color: var(--skin-color);
+
+    position: absolute;
+    bottom: -17px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.lips {
+    height: 0px;
+    width: 0px;
+
+    border-top: 7px solid var(--lip-color);
+    border-left: 8px solid var(--lip-color);
+    border-right: 45px solid transparent;
+
+    border-radius: 20px;
+
+    transform: rotateZ(-5deg);
+
+    position: absolute;
+    bottom: 15px;
+    left: 110px;
+}
+
+.left-lip-correct,
+.right-lip-correct {
+    height: 40px;
+    width: 30px;
+    border-radius: 50%;
+
+    background-color: var(--skin-color);
+
+    position: absolute;
+}
+
+.left-lip-correct {
+    left: -3px;
+}
+
+.right-lip-correct {
+    right: -3px;
 }
