--- a/styles.css
+++ b/styles.css
@@ -150,3 +150,81 @@ body {
 .right-lip-correct {
     right: -3px;
 }
+
+/* the eyes of the batman */
+.left-eye {
+    position: absolute;
+    left: 20px;
+    bottom: 150px;
+}
+
+.right-eye {
+    position: absolute;
+    right: 20px;
+    bottom: 150px;
+
+    transform: rotateY(180deg);
+}
+
+.right-eye-top,
+.left-eye-top {
+    border-bottom: 25px solid var(--skin-color);
+    border-right: 70px solid transparent;
+    border-left: 30px solid transparent;
+}
+
+.left-eye-right,
+.right-eye-right {
+    border-top: 25px solid transparent;
+    border-right: 20px solid var(--skin-color);
+    border-bottom: 30px solid transparent;
+
+    transform: rotateY(180deg) rotateZ(-36deg);
+
+    position: absolute;
+    right: -2px;
+    top: 25.6px;
+}
+
+.left-eye-left,
+.right-eye-left {
+    height: 30px;
+    width: 75px;
+    background-color: var(--skin-color);
+
+    border-bottom-left-radius: 80px;
+
+    position: absolute;
+    top: 31.9px;
+    left: -3.5px;
+
+    transform: rotateZ(11.6deg);
+}
+
+.left-eye-fill,
+.right-eye-fill {
+    height: 30px;
+    width: 100px;
+
+    border-bottom-left-radius: 50px;
+
+    background-color: var(--skin-color);
+
+    position: absolute;
+}
+
+.left-eye-gap,
+.right-eye-gap {
+    position: absolute;
+    top: 51.8px;
+    right: 19px;
+
+    border-bottom-right-radius: 100px;
+
+    background-color: var(--skin-color);
+
+    transform: rotateZ(-12deg);
+
+    height: 16px;
+    width: 15px;
+}
