Added yellow background

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     align-items: center;
     justify-content: center;
 
-    background-color: rgba(73, 73, 34, 0.26);
+    background-color: rgb(228, 228, 22);
 }
 
 /* the round edged face cut of the batman */
